Init subgraph export
